--- a/css/style-header.css
+++ b/css/style-header.css
@@ -1,8 +1,43 @@
 /* Это стили для шапки страницы */
-header{
+header {
     background-color: #2ecc71;
 }
 
-.banner{
+.banner {
     background-color: #080425;
+    background: url('../images/banner-header.jpg')no-repeat;
 }
+
+/* Спмсок меню */
+.main-nav ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+/* элемент li и сылка а в нём- класс позиционирования */
+.operation-sistems,
+.operation-sistems a{
+    display: block;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
+.operation-sistems{
+    opacity: .7 ;
+}
+
+/* элемент li - класс длф фона*/
+.apple{
+    background:#38251b url('../images/sprits/spritesheet.png')no-repeat -85px -17px;
+}
+
+.android{
+    background:#38251b url('../images/sprits/spritesheet.png')no-repeat -12px -14px;
+}
+
+.windows{
+    background:#38251b url('../images/sprits/spritesheet.png')no-repeat -158px -14px;
+}
+
