--- a/css/style-header.css
+++ b/css/style-header.css
@@ -1,24 +1,48 @@
 /* Это стили для шапки страницы */
 header {
     background-color: #2ecc71;
+    padding-top: 10px;
 }
 
 .banner {
     background-color: #080425;
     background: url('../images/banner-header.jpg')no-repeat;
+    background-size: cover;
+    padding: 152px 0 172px 325px;
 }
 
-/* Спмсок меню */
-.main-nav ul{
-    list-style: none;
-    padding: 0;
+/* ************************************************************************************** */
+/* styles for .conteiner-banner */
+/* ************************************************************************************** */
+.conteiner-banner{
+    width: 470px;
+}
+.conteiner-banner h1{
+    border: 1px solid red;
+    /* width: 277px; */
+    padding: 22px 0px 46px 0px;
+    margin: 0 0 30px;
+}
+
+.conteiner-banner p{
+    border: 1px solid red;
+    /* width: 470px; */
+    padding: 0px 0px 0px 6px;
+    margin: 0 0 30px 0;
+}
+
+.main-nav{
+    border: 1px solid red;
+    /* width: 470px; */
+    padding: 0px 0px 0px 0px;
     margin: 0;
 }
+
+
 
 /* элемент li и сылка а в нём- класс позиционирования */
 .operation-sistems,
 .operation-sistems a{
-    display: block;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -34,9 +58,10 @@ header {
     opacity: 1;
 }
 
-/* элемент li - класс длф фона*/
+/* класс для фона элемента li */
 .apple{
     background: url('../images/sprits/spritesheet.png')no-repeat -85px -17px;
+    
 }
 
 .android{
@@ -47,4 +72,8 @@ header {
     background: url('../images/sprits/spritesheet.png')no-repeat -158px -14px;
 }
 
+/* позиционирование иконок */
 
+.operation-sistems:first-of-type{
+    margin-left: 6px;
+}
