--- a/css/style-text.css
+++ b/css/style-text.css
@@ -50,14 +50,14 @@
     font-weight: 700;
 }
 
-.banner-left h1 {
+.conteiner-banner h1 {
     font-family: 'Pacifico', cursive;
     font-size: 60px;
     line-height: 20px;
     color: #fff;
 }
 
-.banner-left p {
+.conteiner-banner p {
     font-family: 'helveticaneuecyrmedium';
     font-size: 24px;
     line-height: 36px;
